# SkyOps

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  process.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  mission.py
backend/app/api/schemas/: __init__.py  mission.py
backend/app/core/: config.py
backend/app/core/evaluation/: __init__.py  contracts.py  report.py  runner.py  scoring.py
backend/app/core/models/: __init__.py  airspace.py  common.py  drone.py  environment.py  evaluation.py  incident.py  mission.py  planning.py  review.py  risk.py
backend/app/core/orchestration/: __init__.py  incident_replanner.py  mission_planner.py  mission_reviewer.py  models.py
backend/app/core/rules/: __init__.py  engine.py  models.py  safety_rules.yaml
backend/app/data/: __init__.py
backend/app/data/evaluation/: __init__.py  compliance_altitude_limit_conflict.yaml  compliance_insufficient_information_human_review.yaml  compliance_no_fly_zone_blocked.yaml  loader.py  (+36 more)
backend/app/integrations/: __init__.py
backend/tests/: test_evaluation_contracts.py  test_evaluation_loader.py  test_evaluation_models.py  test_evaluation_regression.py  test_evaluation_report.py  test_evaluation_runner.py  test_evaluation_scoring.py  test_hard_constraint_rules.py  test_health.py  test_incident_replanner.py  test_llm_adapter_contract_regression.py  test_llm_contracts.py  test_mission_orchestrator.py  test_mission_plan_contract.py  test_mission_reviewer.py  test_mock_llm_provider.py  test_scenario_loader.py
(+56 files in other folders)
